--- a/src/main/webapp/pages/UserCreation/UserCreation.html
+++ b/src/main/webapp/pages/UserCreation/UserCreation.html
@@ -49,6 +49,11 @@
                                     defaultvalue="USA" readonly="true"></wm-form-field>
                                 </wm-gridcolumn>
                             </wm-gridrow>
+                            <wm-gridrow name="gridrow21">
+                                <wm-gridcolumn columnwidth="12" name="gridcolumn31_1">
+                                    <wm-picture name="picture1" width="200" height="200"></wm-picture>
+                                </wm-gridcolumn>
+                            </wm-gridrow>
                             <wm-gridrow name="gridrow1" padding="2em unset">
                                 <wm-gridcolumn name="gridcolumn1" columnwidth="4" horizontalalign="left">
                                     <wm-label padding="unset 0.5em" name="label9" caption="Please upload an image to use as your profile photo."></wm-label>
