--- a/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
+++ b/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
@@ -51,7 +51,7 @@
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
-                                    <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number"></wm-form-field>
+                                    <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
                                     <wm-form-field name="active" displayname="Active" show="false" primary-key="false" generator="assigned" key="active" type="boolean" widget="checkbox" placeholder=""></wm-form-field>
                                     <wm-form-field name="reviewer" displayname="Reviewer" show="false" primary-key="false" generator="assigned" key="reviewer" type="string" widget="text" maxchars="255" defaultvalue="bind:Variables.CurrentUserDetails.dataSet.email"
                                     inputtype="text" placeholder="Enter value"></wm-form-field>
@@ -90,7 +90,7 @@
                                     <wm-layoutgrid columns="1" name="layoutgrid3_1">
                                         <wm-gridrow name="gridrow7">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn10">
-                                                <wm-form-field name="approvalStatus" displayname="Approval Status" show="true" primary-key="false" generator="assigned" key="approvalStatus" type="string" widget="select" maxchars="255" placeholder="Enter value"
+                                                <wm-form-field name="approvalStatus2" displayname="Approval Status" show="true" primary-key="false" generator="assigned" key="approvalStatus" type="string" widget="select" maxchars="255" placeholder="Enter value"
                                                 dataset="Pending,Approved,Suspended" datafield="approvalStatus" displayfield="approvalStatus" defaultvalue="Approved"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
@@ -111,7 +111,7 @@
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
-                                    <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number"></wm-form-field>
+                                    <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
                                     <wm-form-action key="reset" display-name="Cancel" show="true" class="form-reset btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" shortcutkey="" disabled="false" type="button"
                                     update-mode="true"></wm-form-action>
                                     <wm-form-action key="cancel" display-name="Save" show="true" class="form-cancel btn-primary" iconclass="wi wi-save" title="Save" action="Variables.UpdateVendorStatusFromApproved.invoke()" disabled="false"
@@ -142,12 +142,12 @@
                                     <wm-layoutgrid columns="1" name="layoutgrid4">
                                         <wm-gridrow name="gridrow10">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn13">
-                                                <wm-form-field name="approvalStatus" displayname="Approval Status" show="true" primary-key="false" generator="assigned" key="approvalStatus" type="string" widget="select" maxchars="255" placeholder="Enter value"
+                                                <wm-form-field name="approvalStatus3" displayname="Approval Status" show="true" primary-key="false" generator="assigned" key="approvalStatus" type="string" widget="select" maxchars="255" placeholder="Enter value"
                                                 dataset="Pending,Approved,Suspended" datafield="approvalStatus" displayfield="approvalStatus" defaultvalue="Suspended"></wm-form-field>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
                                     </wm-layoutgrid>
-                                    <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number"></wm-form-field>
+                                    <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number" placeholder=""></wm-form-field>
                                     <wm-form-field name="dateApproved" displayname="Date Approved" show="false" primary-key="false" generator="assigned" key="dateApproved" type="date" widget="date" outputformat="yyyy-MM-dd" placeholder="Select date"
                                     defaultvalue="CURRENT_DATE"></wm-form-field>
                                     <wm-form-field name="expiresDate" displayname="Expires Date" show="false" primary-key="false" generator="assigned" key="expiresDate" type="date" widget="date" placeholder="Select date" outputformat="yyyy-MM-dd"></wm-form-field>
