Vendor Review- View Profile link not working Files modified - [ManageMunicipalityVendors.js,ManageMunicipalityVendors.html]

--- a/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
+++ b/src/main/webapp/pages/ManageMunicipalityVendors/ManageMunicipalityVendors.html
@@ -168,7 +168,7 @@
             <wm-dialogactions name="dialogactions1">
                 <wm-button class="btn-primary" caption="Close" on-click="closeDialog()" name="button1" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
-            <wm-liveform novalidate="false" errormessage="" title="Vendor Info" formlayout="inline" iconclass="wi wi-edit" dataset="bind:Variables.VendorProfile.dataSet.data[0]
+            <wm-liveform novalidate="false" errormessage="" title="" formlayout="inline" iconclass="" dataset="bind:Variables.VendorProfile.dataSet.data[0]
 " captionalign="left" captionposition="top" name="liveform4" class="panel-primary">
                 <wm-layoutgrid columns="3" name="layoutgrid5">
                     <wm-gridrow name="gridrow12">
