--- a/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
+++ b/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
@@ -169,7 +169,7 @@
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
     <wm-view class="dialog-view" name="view1">
-        <wm-dialog dialogtype="design-dialog" modal="true" title="Upload Logo" iconclass="wi wi-upload" name="dialog1">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Upload Logo" iconclass="wi wi-upload" name="dialog1" on-opened="dialog1Opened($event, $scope)">
             <wm-dialogactions name="dialogactions1">
                 <wm-button class="btn-secondary" caption="Cancel" type="button" margin="unset 0.5em" name="button5_1" on-click="Widgets.dialog1.close()" iconclass="wi wi-cancel"></wm-button>
                 <wm-button class="btn-raised btn-primary" caption="Upload" name="button4" on-click="Widgets.liveformUpdateLogo.save()" iconclass="wi wi-file-upload"></wm-button>
@@ -242,6 +242,7 @@
                     </wm-gridrow>
                     <wm-gridrow name="gridrow29">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn49" horizontalalign="left">
+                            <wm-picture name="picture2" width="100" height="100"></wm-picture>
                             <wm-form-field name="logo" displayname="Please upload image with transparency" show="true" primary-key="false" generator="assigned" key="logo" type="blob" widget="upload" maxchars="255"></wm-form-field>
                         </wm-gridcolumn>
                     </wm-gridrow>
