Fixed placement of Upload Photo button on mobile for My Profile, changed font of Upload Logo button to match other buttons on MunicipalitySettings Files modified - [MunicipalitySettings.html,pages-config.json,MyProfile.html]

--- a/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
+++ b/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
@@ -151,7 +151,7 @@
                                                 <wm-gridrow name="gridrow41">
                                                     <wm-gridcolumn columnwidth="2" name="gridcolumn63"></wm-gridcolumn>
                                                     <wm-gridcolumn columnwidth="8" name="gridcolumn61" horizontalalign="center" padding="1em unset">
-                                                        <wm-button class="btn-primary" caption="Upload" type="button" margin="unset 0.5em" name="button5" iconclass="wi wi-upload" on-click="Widgets.dialog1.open()" fontweight="bold"></wm-button>
+                                                        <wm-button class="btn-primary" caption="Upload Logo" type="button" margin="unset 0.5em" name="button5" iconclass="wi wi-upload" on-click="Widgets.dialog1.open()"></wm-button>
                                                         <wm-label padding="0.5em 0.5em unset 0.5em" name="label13" caption="Upload your Municipality Logo. Please use images with transparency" width="100%"></wm-label>
                                                     </wm-gridcolumn>
                                                     <wm-gridcolumn columnwidth="2" name="gridcolumn62" horizontalalign="left"></wm-gridcolumn>
