--- a/src/main/webapp/pages/MyProfile/MyProfile.html
+++ b/src/main/webapp/pages/MyProfile/MyProfile.html
@@ -16,9 +16,8 @@
                             <wm-layoutgrid name="layoutgrid5">
                                 <wm-gridrow name="gridrow20">
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn33" horizontalalign="center">
-                                        <wm-picture name="picture1" picturesource="bind:&quot;services/cx2/Users/&quot;+Variables.CurrentUserDetails.dataSet.id+&quot;/content/photo&quot;" width="30em" height="30em" margin="unset unset 2% unset"></wm-picture>
-                                        <wm-button class="btn-default btn-primary" caption="Upload New Photo" type="button" margin="unset 0.5em" name="buttonUpdateProfilePic" iconclass="wi wi-file-upload" on-click="Widgets.dialog1.open()"
-                                        horizontalalign="center"></wm-button>
+                                        <wm-picture name="picture1" picturesource="bind:&quot;services/cx2/Users/&quot;+Variables.CurrentUserDetails.dataSet.id+&quot;/content/photo&quot;" width="30em" height="30em" margin="5% unset"></wm-picture>
+                                        <wm-button class="btn-default btn-primary" caption="Upload Photo" type="button" margin="unset 0.5em" name="buttonUpdateProfilePic" iconclass="wi wi-file-upload" on-click="Widgets.dialog1.open()" horizontalalign="center"></wm-button>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="6" name="gridcolumn34" padding="unset unset unset 5%">
                                         <wm-composite name="composite1" width="80%" margin="2% unset unset unset">
