Updated photo upload label text Files modified - [MunicipalitySettings.html]

--- a/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
+++ b/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
@@ -152,7 +152,8 @@
                                                     <wm-gridcolumn columnwidth="2" name="gridcolumn63"></wm-gridcolumn>
                                                     <wm-gridcolumn columnwidth="8" name="gridcolumn61" horizontalalign="center" padding="1em unset">
                                                         <wm-button class="btn-primary" caption="Upload Logo" type="button" margin="unset 0.5em" name="button5" iconclass="wi wi-upload" on-click="Widgets.dialog1.open()"></wm-button>
-                                                        <wm-label padding="0.5em 0.5em unset 0.5em" name="label13" caption="Upload your Municipality Logo. Please use images with transparency" width="100%"></wm-label>
+                                                        <wm-label padding="0.5em 0.5em unset 0.5em" name="label13" caption="Upload your Municipality Logo for use throughout CivicXpress. For the best results, please use an image with a transparent background."
+                                                        width="100%"></wm-label>
                                                     </wm-gridcolumn>
                                                     <wm-gridcolumn columnwidth="2" name="gridcolumn62" horizontalalign="left"></wm-gridcolumn>
                                                 </wm-gridrow>
@@ -243,7 +244,7 @@
                     <wm-gridrow name="gridrow29">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn49" horizontalalign="left">
                             <wm-picture name="picture2" width="100" height="100"></wm-picture>
-                            <wm-form-field name="logo" displayname="Please upload image with transparency" show="true" primary-key="false" generator="assigned" key="logo" type="blob" widget="upload" maxchars="255"></wm-form-field>
+                            <wm-form-field name="logo" displayname="For the best results, please use an image with a transparent background." show="true" primary-key="false" generator="assigned" key="logo" type="blob" widget="upload" maxchars="255"></wm-form-field>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow30">
