--- a/src/main/webapp/pages/MyProfile/MyProfile.html
+++ b/src/main/webapp/pages/MyProfile/MyProfile.html
@@ -258,7 +258,7 @@
                     <wm-gridrow name="gridrow18">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn29">
                             <wm-picture name="picture2" width="200" height="200"></wm-picture>
-                            <wm-form-field name="photo" displayname="Upload Photo" show="true" primary-key="false" generator="assigned" key="photo" type="blob" widget="upload" maxchars="255" on-click="photoClick($event, $scope)" filetype="image"></wm-form-field>
+                            <wm-form-field name="photo" show="true" primary-key="false" generator="assigned" key="photo" type="blob" widget="upload" maxchars="255" on-click="photoClick($event, $scope)" filetype="image" displayname="Please upload an image to use as your profile photo."></wm-form-field>
                         </wm-gridcolumn>
                     </wm-gridrow>
                 </wm-layoutgrid>
